--- a/app/src/main/res/layout-land/content_main.xml
+++ b/app/src/main/res/layout-land/content_main.xml
@@ -35,7 +35,6 @@
             android:layout_weight="4"
             android:id="@+id/foodin"/>
 
-
         <EditText
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -73,7 +72,7 @@
 
         <Button
             android:id="@+id/DeleteButton"
-            android:text="Delete Selected"
+            android:text="Delete selected"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1" />
@@ -81,9 +80,6 @@
 
 
     </LinearLayout>
-
-
-
 
     <ListView
         android:id="@+id/list"
