--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -2,9 +2,32 @@
       xmlns:app="http://schemas.android.com/apk/res-auto"
       xmlns:tools="http://schemas.android.com/tools"
       tools:context="org.projects.shoppinglist.MainActivity">
+
+
+    <item
+        android:id="@+id/action_clear_all"
+        android:title="@string/action_clear_all"
+        android:icon="@mipmap/ic_delete_forever_white_24dp"
+        android:orderInCategory="1"
+        app:showAsAction="always"
+       />
+
+
     <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
         android:title="@string/action_settings"
         app:showAsAction="never"/>
+
+    <item
+        android:id="@+id/action_share"
+        android:orderInCategory="100"
+        android:title="Share"
+        app:showAsAction="never"/>
+
+
+
+
+
+
 </menu>
