--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -69,8 +69,6 @@
         android:orientation="horizontal"
         android:padding="8dp">
 
-
-
         <Button
             android:id="@+id/DeleteButton"
             android:text="Delete Selected"
@@ -78,10 +76,22 @@
             android:layout_height="wrap_content"
             android:layout_weight="1" />
 
-
-
     </LinearLayout>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:padding="8dp">
+
+        <Button
+            android:id="@+id/webViewButton"
+            android:text="Check offers now!"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1" />
+
+    </LinearLayout>
 
 
 
