--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -23,11 +23,7 @@
         android:id="@+id/action_share"
         android:orderInCategory="100"
         android:title="Share"
-        app:showAsAction="never"/>
-
-
-
-
-
+        android:icon="@mipmap/ic_share_white_24dp"
+        app:showAsAction="always"/>
 
 </menu>
