--- a/app/src/main/res/layout-land/content_main.xml
+++ b/app/src/main/res/layout-land/content_main.xml
@@ -88,7 +88,7 @@
         android:padding="8dp">
 
         <Button
-            android:id="@+id/WebButton"
+            android:id="@+id/webViewButton"
             android:text="Check offers now!"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
